# sakuradas_waveletscat

./: README.md
sakuradas_waveletscat/: 1_design.ipynb  1_design.py  2_scattering.py  2_transformation.ipynb  2_transformation.py  3_clustering.py  3_reduction.ipynb  3_reduction.py  4_reconstruction.ipynb  Params.py  clustering.py  dendrogram_202312010000_600.npy  dendrogram_202505150000_86400.npy  filterbank.py  main.py  pyproject.toml  scattering.py
sakuradas_waveletscat/.history/: 2_scattering_20251029171615.py  2_scattering_20251030093343.py  2_scattering_20251030093629.py  2_scattering_20251030095318.py  2_scattering_20251030095519.py  2_scattering_20251030100001.py  2_scattering_20251030100453.py  2_scattering_20251030120925.py  2_scattering_20251030121901.py  3_clustering_20251030094511.py  3_clustering_20251030094731.py  3_clustering_20251030094845.py  3_clustering_20251030103917.py  3_clustering_20251030104212.py  3_clustering_20251030104325.py  3_clustering_20251030104339.py  3_clustering_20251030104357.py  3_clustering_20251030104503.py  3_clustering_20251030104506.py  3_clustering_20251030104621.py  3_clustering_20251030104701.py  3_clustering_20251030104721.py  3_clustering_20251030104734.py  3_clustering_20251030104750.py  3_clustering_20251030104855.py  3_clustering_20251030112759.py  3_clustering_20251030143045.py  3_clustering_Ndays_20251030120026.py  3_clustering_Ndays_20251030120045.py  3_clustering_Ndays_20251030120059.py  3_clustering_Ndays_20251030120236.py  3_clustering_Ndays_20251030120254.py  3_clustering_Ndays_20251030120325.py  (+127 more)
(+80 files in other folders)
