[project]
name = "sakuradas-waveletscat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.13.0",
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "obspy>=1.4.1",
    "scienceplots>=2.1.1",
    "scipy>=1.13.1",
]
